// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.usageevents.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/usageevents/v1";

// UIBannerClickEvent is a usage event sent by the UI when the upgrade
// banner is clicked.
message UIBannerClickEvent {
  // The name of the user that generated the event. It will be anonymized on the
  // local Teleport auth server before sending.
  string user_name = 1;

  // The cluster alert name.
  string alert = 2;
}

// UIOnboardDomainNameTCSubmitEvent
message UIOnboardDomainNameTCSubmitEvent {}

// UIOnboardGoToDashboardClickEvent
message UIOnboardGoToDashboardClickEvent {}

// UIOnboardGetStartedClickEvent
message UIOnboardGetStartedClickEvent {
  string user_name = 1;
}

// UIOnboardCompleteGoToDashboardClickEvent
message UIOnboardCompleteGoToDashboardClickEvent {
  string user_name = 1;
}

// UIOnboardAddFirstResourceClickEvent
message UIOnboardAddFirstResourceClickEvent {
  string user_name = 1;
}

// UIOnboardAddFirstResourceLaterClickEvent
message UIOnboardAddFirstResourceLaterClickEvent {
  string user_name = 1;
}

// UsageEventOneOf is a message that can accept a oneof of any supported
// external usage event.
message UsageEventOneOf {
  oneof event {
    UIBannerClickEvent ui_banner_click = 1;
    UIOnboardDomainNameTCSubmitEvent ui_onboard_domain_name_tc_submit = 2;
    UIOnboardGoToDashboardClickEvent ui_onboard_go_to_dashboard_click = 3;
    UIOnboardGetStartedClickEvent ui_onboard_get_started_click = 4;
    UIOnboardCompleteGoToDashboardClickEvent ui_onboard_complete_go_to_dashboard_click = 5;
    UIOnboardAddFirstResourceClickEvent ui_onboard_add_first_resource_click = 6;
    UIOnboardAddFirstResourceLaterClickEvent ui_onboard_add_first_resource_later_click = 7;
  }
}
